--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   db:
     container_name: "db_books_container"
-    image: postgres:13-alpine
+    image: postgres:13
     ports:
       - "5435:5432"
     volumes:
