--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.78.0
 uvicorn[standard]==0.18.2
-psycopg2>=2.8.6,<2.9
+psycopg2-binary>=2.8.6,<2.9
 colorama==0.4.4
 SQLAlchemy==1.4.25
 pydantic==1.9.1
+python-multipart==0.0.5
